crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3009_clean_apt_lists_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3009",
    "help": null,
    "labels": [],
    "message": "delete apt-get package lists after use",
    "path": "",
    "primary_span": {
      "end_byte": 36,
      "end_column": 19,
      "end_line": 2,
      "start_byte": 18,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "info"
  },
  {
    "code": "DL3009",
    "help": null,
    "labels": [],
    "message": "delete apt-get package lists after use",
    "path": "",
    "primary_span": {
      "end_byte": 100,
      "end_column": 64,
      "end_line": 3,
      "start_byte": 37,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "info"
  },
  {
    "code": "DL3009",
    "help": null,
    "labels": [],
    "message": "delete apt-get package lists after use",
    "path": "",
    "primary_span": {
      "end_byte": 510,
      "end_column": 59,
      "end_line": 12,
      "start_byte": 452,
      "start_column": 1,
      "start_line": 12
    },
    "severity": "info"
  }
]
