crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3011_valid_expose_port_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 451
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3011",
    "help": null,
    "labels": [],
    "message": "invalid exposed port `65536`",
    "path": "",
    "primary_span": {
      "end_byte": 426,
      "end_column": 13,
      "end_line": 14,
      "start_byte": 414,
      "start_column": 1,
      "start_line": 14
    },
    "severity": "error"
  },
  {
    "code": "DL3011",
    "help": null,
    "labels": [],
    "message": "invalid exposed port `70000`",
    "path": "",
    "primary_span": {
      "end_byte": 488,
      "end_column": 17,
      "end_line": 16,
      "start_byte": 472,
      "start_column": 1,
      "start_line": 16
    },
    "severity": "error"
  },
  {
    "code": "DL3011",
    "help": null,
    "labels": [],
    "message": "invalid exposed port `-1`",
    "path": "",
    "primary_span": {
      "end_byte": 541,
      "end_column": 10,
      "end_line": 18,
      "start_byte": 532,
      "start_column": 1,
      "start_line": 18
    },
    "severity": "error"
  },
  {
    "code": "DL3011",
    "help": null,
    "labels": [],
    "message": "invalid exposed port `port`",
    "path": "",
    "primary_span": {
      "end_byte": 585,
      "end_column": 12,
      "end_line": 20,
      "start_byte": 574,
      "start_column": 1,
      "start_line": 20
    },
    "severity": "error"
  },
  {
    "code": "DL3011",
    "help": null,
    "labels": [],
    "message": "invalid exposed port `80-90`",
    "path": "",
    "primary_span": {
      "end_byte": 645,
      "end_column": 13,
      "end_line": 22,
      "start_byte": 633,
      "start_column": 1,
      "start_line": 22
    },
    "severity": "error"
  }
]
