crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3014_apt_get_install_assume_yes_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3014",
    "help": null,
    "labels": [],
    "message": "use -y with apt-get install",
    "path": "",
    "primary_span": {
      "end_byte": 79,
      "end_column": 43,
      "end_line": 3,
      "start_byte": 37,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "DL3014",
    "help": null,
    "labels": [],
    "message": "use -y with apt-get install",
    "path": "",
    "primary_span": {
      "end_byte": 481,
      "end_column": 64,
      "end_line": 11,
      "start_byte": 418,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "warning"
  },
  {
    "code": "DL3014",
    "help": null,
    "labels": [],
    "message": "use -y with apt-get install",
    "path": "",
    "primary_span": {
      "end_byte": 561,
      "end_column": 50,
      "end_line": 13,
      "start_byte": 512,
      "start_column": 1,
      "start_line": 13
    },
    "severity": "warning"
  }
]
