crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3015_apt_get_no_install_recommends_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 343
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3015",
    "help": null,
    "labels": [],
    "message": "use --no-install-recommends with apt-get install",
    "path": "",
    "primary_span": {
      "end_byte": 82,
      "end_column": 46,
      "end_line": 3,
      "start_byte": 37,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "info"
  },
  {
    "code": "DL3015",
    "help": null,
    "labels": [],
    "message": "use --no-install-recommends with apt-get install",
    "path": "",
    "primary_span": {
      "end_byte": 346,
      "end_column": 53,
      "end_line": 8,
      "start_byte": 294,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "info"
  }
]
