crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3016_pin_npm_versions_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 359
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3016",
    "help": null,
    "labels": [],
    "message": "pin versions in npm install",
    "path": "",
    "primary_span": {
      "end_byte": 53,
      "end_column": 23,
      "end_line": 3,
      "start_byte": 31,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "DL3016",
    "help": null,
    "labels": [],
    "message": "pin versions in npm install",
    "path": "",
    "primary_span": {
      "end_byte": 112,
      "end_column": 28,
      "end_line": 5,
      "start_byte": 85,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "DL3016",
    "help": null,
    "labels": [],
    "message": "pin versions in npm install",
    "path": "",
    "primary_span": {
      "end_byte": 196,
      "end_column": 50,
      "end_line": 7,
      "start_byte": 147,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  },
  {
    "code": "DL3016",
    "help": null,
    "labels": [],
    "message": "pin versions in npm install",
    "path": "",
    "primary_span": {
      "end_byte": 401,
      "end_column": 36,
      "end_line": 11,
      "start_byte": 366,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "warning"
  }
]
