crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3018_pin_apk_versions_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 375
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3018",
    "help": null,
    "labels": [],
    "message": "pin versions in apk add",
    "path": "",
    "primary_span": {
      "end_byte": 48,
      "end_column": 17,
      "end_line": 3,
      "start_byte": 32,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "DL3018",
    "help": null,
    "labels": [],
    "message": "pin versions in apk add",
    "path": "",
    "primary_span": {
      "end_byte": 117,
      "end_column": 42,
      "end_line": 5,
      "start_byte": 76,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "DL3018",
    "help": null,
    "labels": [],
    "message": "pin versions in apk add",
    "path": "",
    "primary_span": {
      "end_byte": 167,
      "end_column": 28,
      "end_line": 7,
      "start_byte": 140,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  }
]
