crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3020_prefer_copy_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 407
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 33,
      "end_column": 17,
      "end_line": 2,
      "start_byte": 17,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "error"
  },
  {
    "code": "DL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 48,
      "end_column": 15,
      "end_line": 3,
      "start_byte": 34,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "DL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 81,
      "end_column": 33,
      "end_line": 4,
      "start_byte": 49,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "error"
  },
  {
    "code": "DL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 105,
      "end_column": 24,
      "end_line": 5,
      "start_byte": 82,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "error"
  },
  {
    "code": "DL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 271,
      "end_column": 29,
      "end_line": 11,
      "start_byte": 243,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "error"
  },
  {
    "code": "DL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 323,
      "end_column": 52,
      "end_line": 12,
      "start_byte": 272,
      "start_column": 1,
      "start_line": 12
    },
    "severity": "error"
  },
  {
    "code": "DL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 454,
      "end_column": 16,
      "end_line": 16,
      "start_byte": 439,
      "start_column": 1,
      "start_line": 16
    },
    "severity": "error"
  },
  {
    "code": "DL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 471,
      "end_column": 17,
      "end_line": 17,
      "start_byte": 455,
      "start_column": 1,
      "start_line": 17
    },
    "severity": "error"
  },
  {
    "code": "DL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 487,
      "end_column": 16,
      "end_line": 18,
      "start_byte": 472,
      "start_column": 1,
      "start_line": 18
    },
    "severity": "error"
  }
]
