crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3021_copy_multiple_destination_slash_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 423
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3021",
    "help": null,
    "labels": [],
    "message": "`COPY` with multiple sources requires the destination to end with `/`",
    "path": "",
    "primary_span": {
      "end_byte": 61,
      "end_column": 28,
      "end_line": 3,
      "start_byte": 34,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "DL3021",
    "help": null,
    "labels": [],
    "message": "`COPY` with multiple sources requires the destination to end with `/`",
    "path": "",
    "primary_span": {
      "end_byte": 128,
      "end_column": 38,
      "end_line": 5,
      "start_byte": 91,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "error"
  },
  {
    "code": "DL3021",
    "help": null,
    "labels": [],
    "message": "`COPY` with multiple sources requires the destination to end with `/`",
    "path": "",
    "primary_span": {
      "end_byte": 211,
      "end_column": 44,
      "end_line": 7,
      "start_byte": 168,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "error"
  }
]
